--- a/src/common/App/App.css
+++ b/src/common/App/App.css
@@ -16,3 +16,7 @@ code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.warningMessage {
+    color: #ff471a;
+}
