updated class -> classNames, and similar

--- a/express-server/public/views/error.pug
+++ b/express-server/public/views/error.pug
@@ -4,6 +4,6 @@ html(lang='en')
 body
     .container
         #content.row
-            span#msg(class='message')
+            span#msg(className='message')
             br
             | #{message}
